# faqtory

./: FAQ.md  README.md  faq.yml  pyproject.toml  requirements.in  requirements.txt
.faq/: FAQ.md  suggest.md
.github/: new_issue.yml
.github/workflows/: new_issue.yml
questions/: are-you-thinking-what-im-thinking.question.md  black.question.md  brown-and-sticky.question..md  duck.question.md  everything.question.md  example.question.md  frequency.question.md  joan-of-arc.question.md  mars-chances.question.md  the-log-lady.question.md  timestamp.question.md  version.question.md  when-faced-with-minbari-fleet.question.md  where-am-i.question.md  who.question.md  why-was-six-afraid.md
src/faq/: __main__.py  cli.py
src/faqtory/: cli.py  models.py  questions.py  templates.py
