[tool.poetry]
name = "faqtory"
version = "1.1.2"
description = "Auto FAQ builder"
authors = ["Will McGugan <willmcgugan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
faqtory = "faqtory.cli:run"

[tool.black]
includes = "src"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.6.0"
jinja2 = "^3.1.2"
click = "^8.1.3"
pyyaml = "^6.0"
python-frontmatter = "^1.0.0"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
