[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faqtory"
version = "1.1.3"
description = "Auto FAQ builder"
authors = [{name = "Will McGugan", email="willmcgugan@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "rich~=13.6.0",
    "jinja2~=3.1.2",
    "click~=8.1.3",
    "pyyaml~=6.0",
    "python-frontmatter~=1.0.0",
    "thefuzz[speedup]~=0.19.0",
    "pydantic~=1.10.2"
]
requires-python = ">=3.8"

[project.scripts]
faqtory = "faqtory.cli:run"


[project.urls]
Documentation = "https://github.com/willmcgugan/faqtory"
"Bug Tracker" = "https://github.com/willmcgugan/faqtory/issues"
"Source Code" = "https://github.com/willmcgugan/faqtory"

[tool.black]
includes = "src"
line-length = 88