[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faqtory"
version = "1.1.3"
description = "Auto FAQ builder"
authors = [{name = "Will McGugan", email="willmcgugan@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
faqtory = "faqtory.cli:run"


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Documentation = "https://github.com/willmcgugan/faqtory"
"Bug Tracker" = "https://github.com/willmcgugan/faqtory/issues"
"Source Code" = "https://github.com/willmcgugan/faqtory"

[tool.black]
includes = "src"
